fix: top badge cutoff

--- a/round/main.css
+++ b/round/main.css
@@ -2,6 +2,7 @@
   --border-radius-size: 0;
 }
 
+.N8aJrSpxQ6II4CY_aFdYI,
 .IIJeieZ-ZPRfIULY7uSDG,
 .gh2rjM-vD2oIms-jfWeCA,
 .VytJzt3Z_t6332-n24Yrc,
@@ -75,7 +76,6 @@
   overflow: hidden;
 }
 
-
 /* Border (todo: make border colors as separate color file options) */
 
 .gpfocus .basicpartnereventspage_BasicPartnerEvent_2yuwU {
@@ -126,8 +126,20 @@
 }
 
 /* exceptions */
-.appactivityday_NoCommentSupport_2CB_R>.appactivityday_EventBody_NEMXh>.Panel>.focusring_FocusRingRoot_3PH_X>.focusring_FocusRing_1IZrQ,
-.controllerconfiguratorchoosebinding_ChooseBindingContainer_1Kj9l>.gamepadtabbedpage_GamepadTabbedPage_3IBLc>.gamepadtabbedpage_TabContents_WDa0_>.overlappingtransition_TransitionGroup_11Twu>.overlappingtransition_ContentWrapper_1knAs>.Panel>.gamepadtabbedpage_TabContentsScroll_1X4dt>.focusring_FocusRingRoot_3PH_X>.focusring_FocusRing_1IZrQ {
+.appactivityday_NoCommentSupport_2CB_R
+  > .appactivityday_EventBody_NEMXh
+  > .Panel
+  > .focusring_FocusRingRoot_3PH_X
+  > .focusring_FocusRing_1IZrQ,
+.controllerconfiguratorchoosebinding_ChooseBindingContainer_1Kj9l
+  > .gamepadtabbedpage_GamepadTabbedPage_3IBLc
+  > .gamepadtabbedpage_TabContents_WDa0_
+  > .overlappingtransition_TransitionGroup_11Twu
+  > .overlappingtransition_ContentWrapper_1knAs
+  > .Panel
+  > .gamepadtabbedpage_TabContentsScroll_1X4dt
+  > .focusring_FocusRingRoot_3PH_X
+  > .focusring_FocusRing_1IZrQ {
   border: none;
   outline: 2px solid rgba(255, 255, 255, 0.6);
   border-radius: 0px;
